--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@
     top: 10px;
     background-color: white;
     grid-area: 1 / 2 / 2 / 6;
+    height: 150px;
 }
 
 #topBarTop{
@@ -123,5 +124,77 @@
     & span{
         padding-top: 7px;
         font-size: large;
+    }
+}
+
+#topBarBottom{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#topBarBottomLeft{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+}
+
+#avatarPic{
+
+    grid-area: 1 / 1 / 3 / 2;
+    align-self: center;
+    & img{
+        position: relative;
+        left: 4vw;
+        border-radius: 50%;
+    }
+
+}
+
+#welcomeMessage{
+    grid-area : 1 / 2 / 2 / 3;
+    text-align: left;
+    font-weight: 600;
+    font-size: larger;
+    padding-top: 15px;
+}
+
+#userName{
+    grid-area: 2/ 2 / 2 / 2;
+    text-align: left;
+    font-weight: 900;
+    font-size: x-large;
+
+}
+
+#topBarBottomRight{
+    display: grid;
+    grid-template-columns: repeat(3, min(120px, 120px));;
+    align-content: center;
+    position: relative;
+    /*right: 4vw;*/
+    padding-left: 37%;
+
+    & button{
+
+        font-weight: bolder;
+        color: white;
+        border-radius: 30px;
+        border: none;
+        background-color: #1992D4;
+        width: 80px;
+        height: 40px;
+
+    }
+
+    & #newButton{
+        grid-column-start: 1;
+    }
+
+    & #uploadButton{
+        grid-column-start: 2;
+    }
+    & #submitButton{
+        grid-column-start: 3;
     }
 }
