--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@
 #mainGrid{
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 2fr 2fr 2fr;
+    grid-template-rows: 1fr 2fr 2fr 2fr;
     width: 100vw;
     height: 100vh;
     background-color: rgb(229, 234, 235);
@@ -77,124 +77,47 @@
 }
 
 #topBar{
-    padding-top: 1vh;
-    top: 10px;
+    grid-column: 2 / 6;
+    display: flex;
+    flex-direction: column;
     background-color: white;
-    grid-area: 1 / 2 / 2 / 6;
-    height: 150px;
+    box-shadow: 2px 0px 10px grey;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
 }
 
 #topBarTop{
     display: flex;
     justify-content: space-between;
-}
 
-#topBarTopLeft{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    width: 60%;
     & input{
-        position: relative;
-        top: 20%;
-        background-color: rgb(229, 234, 235);
         border: none;
-        width: 80%;
-        height: 60%;
         border-radius: 30px;
+        background-color: rgb(229, 234, 235);
     }
 
-    & span{
-        top: 30%;
-        padding-right: 1%;
-    }
-}
-
-#topBarTopRight{
-    display: flex;
-    gap: 5%;
-    justify-content: center;
-    font-weight: bold;
-    width: 40%;
-
-    & #avatar{
+    & img{
         border-radius: 50%;
     }
 
-    & span{
-        padding-top: 7px;
-        font-size: large;
-    }
 }
 
 #topBarBottom{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    justify-content: space-between;
 }
 
 #topBarBottomLeft{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 1fr;
-
-}
-
-#avatarPic{
-
-    grid-area: 1 / 1 / 3 / 2;
-    align-self: center;
+    display: flex;
+    align-items: center;
     & img{
-        position: relative;
-        left: 4vw;
         border-radius: 50%;
     }
-
-}
-
-#welcomeMessage{
-    grid-area : 1 / 2 / 2 / 3;
-    text-align: left;
-    font-weight: 600;
-    font-size: larger;
-    padding-top: 15px;
-}
-
-#userName{
-    grid-area: 2/ 2 / 2 / 2;
-    text-align: left;
-    font-weight: 900;
-    font-size: x-large;
-
 }
 
 #topBarBottomRight{
-    display: grid;
-    grid-template-columns: repeat(3, min(120px, 120px));;
-    align-content: center;
-    position: relative;
-    /*right: 4vw;*/
-    padding-left: 37%;
-
-    & button{
-
-        font-weight: bolder;
-        color: white;
-        border-radius: 30px;
-        border: none;
-        background-color: #1992D4;
-        width: 80px;
-        height: 40px;
-
-    }
-
-    & #newButton{
-        grid-column-start: 1;
-    }
-
-    & #uploadButton{
-        grid-column-start: 2;
-    }
-    & #submitButton{
-        grid-column-start: 3;
-    }
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
