--- a/styles.css
+++ b/styles.css
@@ -82,25 +82,31 @@
     flex-direction: column;
     background-color: white;
     box-shadow: 2px 0px 10px grey;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
+    padding: 20px;
+    font-size: larger;
+    font-weight: bold;
 }
 
 #topBarTop{
     display: flex;
     justify-content: space-between;
-
+    
     & input{
         border: none;
         border-radius: 30px;
         background-color: rgb(229, 234, 235);
+        width:80%
     }
-
+    
     & img{
         border-radius: 50%;
+        margin-left: 5px;
+        margin-right: 5px;
     }
 
+    & #topBarTopLeft{
+        width: 50%;
+    }
 }
 
 #topBarBottom{
@@ -114,10 +120,26 @@
     & img{
         border-radius: 50%;
     }
+    & #welcomeUserHolder p{
+        margin: 0px 10px 0px;
+    }
 }
 
 #topBarBottomRight{
     display: flex;
     align-items: center;
     gap: 5px;
+
+    & button{
+        border-radius: 60px;
+        border: none;
+        width: 90px;
+        text-align: center;
+        background-color: #1992D4;
+        color: white;
+
+        &:hover{
+            background-color: #1e87c0;
+        }
+    }
 }
