--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,25 @@
         }
     }
 }
+
+#mainContent{
+    grid-column: 2 / 5;
+    grid-row: 2 / 5;
+    margin: 20px;
+}
+
+#cards{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+}
+
+.card{
+     background-color: white;
+     border-radius: 5px;
+     border-left: 6px solid orange;
+     width: 400px;
+     height: 200px;
+}
