--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@
         border-radius: 60px;
         border: none;
         width: 90px;
+        height: 45px;
         text-align: center;
         background-color: #1992D4;
         color: white;
@@ -148,6 +149,7 @@
     grid-column: 2 / 5;
     grid-row: 2 / 5;
     margin: 20px;
+    overflow-y: auto;
 }
 
 #cards{
@@ -164,4 +166,5 @@
      border-left: 6px solid orange;
      width: 400px;
      height: 200px;
+     padding: 15px;
 }
