--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 15px;
 
     &:hover{
        box-shadow: 2px 2px 3px 1px rgb(160, 160, 160);
@@ -270,4 +271,25 @@
     & img{
         border-radius: 50%;
     }
+}
+
+.trendingItem{
+    display: flex;
+    align-content: flex-start;
+
+    & h4{
+        margin: 0px;
+        margin-left: 10px;
+        font-weight: bold;
+    }
+
+    & p{
+        margin-left: 10px;
+        text-justify: auto;
+    }
+}
+
+#creditSection{
+    margin-top: 5px;
+     font-size: x-small;
 }
